Update index.html for list

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <p>
         Here is a paragraph.
     </p>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+    </ul>
 </body>
 </html>
